Ajustes finais de conteúdo e formulario de contato

--- a/css/sass/_defaults.scss
+++ b/css/sass/_defaults.scss
@@ -32,8 +32,8 @@ $white:           #ffffff;
 //--------------------------------------*/
 
 // Define font stacks
-$primary-font:    "Avenir LT Std 55 Roman", Helvetica, Arial, sans-serif;
-$secondary-font:  "Avenir LT Std 85 Heavy", Helvetica, Arial, sans-serif;
+$primary-font:    "Avenir LT Std 55 Roman", Avenir, Helvetica, Arial, sans-serif;
+$secondary-font:  "Avenir LT Std 85 Heavy", Avenir, Helvetica, Arial, sans-serif;
 
 // Base font sizes
 $s-body-size:            14px!default;
