--- a/css/sass/modules/_normalize.scss
+++ b/css/sass/modules/_normalize.scss
@@ -62,7 +62,7 @@ audio:not([controls]) {
  */
 
 html {
-    font-family: sans-serif; /* 1 */
+    font-family: $primary-font; /* 1 */
     -ms-text-size-adjust: 100%; /* 2 */
     -webkit-text-size-adjust: 100%; /* 2 */
 }
