--- a/html/templates/about.html
+++ b/html/templates/about.html
@@ -5,7 +5,7 @@
       <section class="credential row align-center">
         <img src="./img/avatar.jpg" alt="Me smiling to the camera" class="avatar" />
         <article class="column">
-          <h3>Raoni P. Caselli, 28</h3>
+          <h3>Raoni P. Caselli, 29</h3>
           <p>Florianópolis, SC - BR</p>
         </article>
       </section>
@@ -17,9 +17,8 @@
     </header>
     <section class="row">
       <article class="column align-start flex-75 mobile-flex-1">
-        <p>I’m a UX Designer crazy about new technologies and creating friendly and easy to use interfaces. I love to go surfing early in the morning to start my day replenished and ready for the challenges that comes up. I am married to Luísa, a psychologist who is always teaching me new things about emotional intelligence and we have a son, Dante, my happy baby that is showing me a different side of life.</p>
-        <p>I want to find an amazing company that values me as a human being and can help me grow as a UX Designer. I’m looking for a mature design team where I can learn and improve my skills.</p>
-        <button class="button flat">Download resume</button>
+        <p>I’m a UX Designer crazy about new technologies and creating friendly and easy to use interfaces. I love to go surfing early in the morning to start my day replenished and ready for the challenges that comes up. I am married to Luísa, a psychologist who is always teaching me new things about emotional intelligence and we have a lovely son, Dante, that is showing me a whole different side of life.</p>
+        <p>I like working in/with companies that values me as a human being and can help me grow as a UX Designer.</p> <!-- I’m looking for a mature design team where I can learn and improve my skills. -->
       </article>
       <article class="flex-25 family-img">
         <img src="img/family.jpg" alt="My family: Me, Luísa and Dante" title="My family: Me, Luísa and Dante">
