Add IDs for tag manager

--- a/html/templates/process.html
+++ b/html/templates/process.html
@@ -12,7 +12,7 @@
             <article class="column align-start">
               <h3>User-centered Design</h3>
               <p>This is the entire process I've been following in the last 2 years. It's based on the UCD methodology and it uses Problem Framing, Design Thinking and Lean UX for different stages of the process</p>
-              <a href="https://docs.google.com/spreadsheets/d/1UdMUyApmVXzIVa8aWCdhNGpnz65aJYs10ch0PuY1yb8/edit?usp=sharing" class="button flat" target="_blank" alt="More information in portuguese">Read more</a>
+              <a id="ucd" href="https://docs.google.com/spreadsheets/d/1UdMUyApmVXzIVa8aWCdhNGpnz65aJYs10ch0PuY1yb8/edit?usp=sharing" class="button flat" target="_blank" alt="More information in portuguese">Read more</a>
             </article>
           </section>
         </li>
@@ -25,7 +25,7 @@
             <article class="column align-start">
               <h3>Problem framing</h3>
               <p>First we have to understand really well the problem, who are the impacted actors, what are the difficulties around this problem, how is the current user experience and if it's a problem that really deserves to be solved</p>
-              <a href="https://docs.google.com/presentation/d/1wN5MsY5VpTWbtCHpejFolEXt3PIW1uUYkoMBJlIfh4c/edit?usp=sharing" class="button flat" target="_blank" alt="More information in portuguese">Read more</a>
+              <a id="problemFraming" href="https://docs.google.com/presentation/d/1wN5MsY5VpTWbtCHpejFolEXt3PIW1uUYkoMBJlIfh4c/edit?usp=sharing" class="button flat" target="_blank" alt="More information in portuguese">Read more</a>
             </article>
           </section>
         </li>
@@ -38,7 +38,7 @@
             <article class="column align-start">
               <h3>Discovery Sprint with Design Thinking</h3>
               <p>Design Thinking is a methodology that offers a solutions based problem solving approach. In a Discovery Sprint we can use it's methods and techniques to collect data, analyse it, generate insights and validate concepts for the next phase to work with.</p>
-              <a href="https://docs.google.com/presentation/d/1Ntt1CWiSnc08NmepVXDfTP5p6pQlteXUpb3oUpA4l7I/edit?usp=sharing" class="button flat" target="_blank" alt="More information in portuguese">Read more</a>
+              <a id="designThinking" href="https://docs.google.com/presentation/d/1Ntt1CWiSnc08NmepVXDfTP5p6pQlteXUpb3oUpA4l7I/edit?usp=sharing" class="button flat" target="_blank" alt="More information in portuguese">Read more</a>
             </article>
           </section>
         </li>
@@ -51,7 +51,7 @@
             <article class="column align-start">
               <h3>Lean UX</h3>
               <p>Lean UX is all about understanding the problem and generating solutions to validate hypothesis. This is done by building MVPs (minimum viable prototypes) to test, getting feedback from real users to learn and evolve, in a cycle of continuous improvement and incremental design.</p>
-              <a href="https://docs.google.com/presentation/d/1r5ZuN1BGe7IY1ol3HJWwms-a9Ow4eGabGg478JEy2Ag/edit?usp=sharing" class="button flat" target="_blank" alt="More information in portuguese">Read more</a>
+              <a id="leanUx" href="https://docs.google.com/presentation/d/1r5ZuN1BGe7IY1ol3HJWwms-a9Ow4eGabGg478JEy2Ag/edit?usp=sharing" class="button flat" target="_blank" alt="More information in portuguese">Read more</a>
             </article>
           </section>
         </li>
