--- a/html/templates/about.html
+++ b/html/templates/about.html
@@ -10,9 +10,9 @@
         </article>
       </section>
       <section class="row flex-end social-items">
-        <a class="mdi mdi-behance mdi-24px button flat" href="https://behance.net/raonicaselli" alt="Raoni Caselli on Behance" target="_blank"></a>
-        <a class="mdi mdi-linkedin mdi-24px button flat" href="https://www.linkedin.com/in/raoni-caselli-09a82a2b/" alt="Raoni Caselli on Linkedin" target="_blank"></a>
-        <a class="mdi mdi-medium mdi-24px button flat" href="https://medium.com/@raonicaselli" alt="Raoni Caselli on Medium" target="_blank"></a>
+        <a id="behance" class="mdi mdi-behance mdi-24px button flat" href="https://behance.net/raonicaselli" alt="Raoni Caselli on Behance" target="_blank"></a>
+        <a id="linkedin" class="mdi mdi-linkedin mdi-24px button flat" href="https://www.linkedin.com/in/raoni-caselli-09a82a2b/" alt="Raoni Caselli on Linkedin" target="_blank"></a>
+        <a id="medium" class="mdi mdi-medium mdi-24px button flat" href="https://medium.com/@raonicaselli" alt="Raoni Caselli on Medium" target="_blank"></a>
       </section>
     </header>
     <section class="row">
