--- a/html/templates/portfolio.html
+++ b/html/templates/portfolio.html
@@ -13,7 +13,7 @@
             <article class="flex-50 mobile-flex-1 column align-start">
               <h3>Cas UX Design - One man design agency</h3>
               <p>Showcase of various web and app projects that I worked using the Lean UX design process, focused on solving problems fast (validating with real users!), using only the resources that were absolutely necessary.</p>
-              <a href="https://www.behance.net/gallery/51580881/Cas-UX-Design-One-man-design-agency" alt="Behance project" class="button flat" target="_blank">Open project</a>
+              <a id="casux" href="https://www.behance.net/gallery/51580881/Cas-UX-Design-One-man-design-agency" alt="Behance project" class="button flat" target="_blank">Open project</a>
             </article>
           </section>
         </li>
@@ -26,7 +26,7 @@
             <article class="flex-50 mobile-flex-1 column align-start">
               <h3>Dolphin Surf App</h3>
               <p>Platform for surfers to share wave reports between friends and also record their own surf sessions to track their performance over time.</p>
-              <a href="https://www.behance.net/gallery/39639951/Dolphin-Surf-App" alt="Behance project" class="button flat" target="_blank">Open project</a>
+              <a id="dolphin" href="https://www.behance.net/gallery/39639951/Dolphin-Surf-App" alt="Behance project" class="button flat" target="_blank">Open project</a>
             </article>
           </section>
         </li>
@@ -39,7 +39,7 @@
             <article class="flex-50 mobile-flex-1 column align-start">
               <h3>Supervita</h3>
               <p>Startup dedicated to selling snacks and shakes made of superfoods. I co-founded Supervita with my brother Aruã Caselli and worked on everything from Branding, to publishing on social medias and building both e-commerce and blog.</p>
-              <a href="https://www.behance.net/gallery/51580627/Supervita" alt="Behance project" class="button flat" target="_blank">Open project</a>
+              <a id="supervita" href="https://www.behance.net/gallery/51580627/Supervita" alt="Behance project" class="button flat" target="_blank">Open project</a>
             </article>
           </section>
         </li>
@@ -52,7 +52,7 @@
             <article class="flex-50 mobile-flex-1 column align-start">
               <h3>Healfies</h3>
               <p>Health social network to empower patients to keep their medical history centralized and easy to access, connecting them to their health professionals and organizations. I worked on the App redesign, webapp redesign and design of new features.</p>
-              <a href="https://www.behance.net/gallery/51580239/Healfies" alt="Behance project" class="button flat" target="_blank">Open project</a>
+              <a id="healfies" href="https://www.behance.net/gallery/51580239/Healfies" alt="Behance project" class="button flat" target="_blank">Open project</a>
             </article>
           </section>
         </li>
@@ -65,7 +65,7 @@
             <article class="flex-50 mobile-flex-1 column align-start">
               <h3>Education in the digital culture</h3>
               <p>Digital midia about Education in the Digital Culture for teachers, students and anyone involved with education to consume and share content related to the digital culture. This was a project from the Federal University of Santa Catarina in partnership with the Brazilian government Ministry of Education.</p>
-              <a href="https://www.behance.net/gallery/17417045/Educacao-na-Cultura-Digital" alt="Behance project" class="button flat" target="_blank">Open project</a>
+              <a id="encd" href="https://www.behance.net/gallery/17417045/Educacao-na-Cultura-Digital" alt="Behance project" class="button flat" target="_blank">Open project</a>
             </article>
           </section>
         </li>
@@ -78,7 +78,7 @@
             <article class="flex-50 mobile-flex-1 column align-start">
               <h3>App Nanny</h3>
               <p>Online platform for parents and tutors to find nannies or nurses to help them take care of their children. This was a freelance work for the startup Swell IT Solutions, hired to develop all of the products.</p>
-              <a href="https://www.behance.net/gallery/51579889/App-Nanny" alt="Behance project" class="button flat" target="_blank">Open project</a>
+              <a id="nanny" href="https://www.behance.net/gallery/51579889/App-Nanny" alt="Behance project" class="button flat" target="_blank">Open project</a>
             </article>
           </section>
         </li>
@@ -92,7 +92,7 @@
               <h3>Byond</h3>
               <p>Mobile application for inventory management using RFID technology, bar and QR codes or manually. The tasks included basic inventory counts for single and multiple items, transportation of goods, searching for specific items, reading items informations and more. This was a freelance work for the Startup Byond.
               </p>
-              <a href="https://www.behance.net/gallery/51579661/EFICID-App-para-realizar-inventario-com-RFID" alt="Behance project" class="button flat" target="_blank">Open project</a>
+              <a id="byond" href="https://www.behance.net/gallery/51579661/EFICID-App-para-realizar-inventario-com-RFID" alt="Behance project" class="button flat" target="_blank">Open project</a>
             </article>
           </section>
         </li>
